--- a/app/views/admin/newuser.html.erb
+++ b/app/views/admin/newuser.html.erb
@@ -1,38 +1,41 @@
-<h2>Create Account</h2>
-<%#create account from admin%>
+<div class="log-in-container">
+  <h2>Create Account</h2>
+  <%#create account from admin%>
 
-<div class="row">
-  <div class="col-9">
-    <%= form_for(@user, url: admin_newuser_path, method: :post) do |f| %>
-      <%#= render "devise/shared/error_messages", resource: resource %>
+  <div class="row">
+    <div>
+      <%= form_for(@user, url: admin_newuser_path, method: :post) do |f| %>
+        <%#= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="form-group">
-        <%= f.label :full_name %>
-        <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control" %>
-      </div>
+        <div class="form-group">
+          <%= f.label :full_name %>
+          <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'  %>
-      </div>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'  %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em class="form-text text-muted">(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %>
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+            <em class="form-text text-muted">(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <%= f.submit "Create Account", class: 'btn btn-primary' %>
-      </div>
-    <% end %>
+        <div class="form-group">
+          <%= f.submit "Create Account", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+
   </div>
 </div>
 
